LoadBalancing/ingress.yml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - 192.168.0.45.xip.io
    secretName: test-secret
  rules:
  - host: 192.168.0.45.xip.io
    http:
      paths:
      - path: /dev
        backend:
          serviceName: dev-svc
          servicePort: 80
      - path: /prod
        backend:
          serviceName: prod-svc
          servicePort: 80
